edit batch size

--- a/flower_classifier.ipynb
+++ b/flower_classifier.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {
     "id": "pT--0V_r0Q4B"
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def datagen_flow(df, batch_size, resize_shape, subset):\n",
     "    classes = list(np.unique(labels).astype(str))\n",
     "    \n",
-    "    if subset == 'trainy':\n",
+    "    if subset == 'train':\n",
     "        data_gen = ImageDataGenerator(\n",
     "            rotation_range=20,\n",
     "            width_shift_range=0.2,\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,9 +303,10 @@
     "    else:\n",
     "        X = inp\n",
     "\n",
+    "#     X = Conv2D(256, 3, activation='relu', padding='same')(X)\n",
     "    X = Conv2D(256, 3, activation='relu', padding='same')(X)\n",
-    "    X = Conv2D(128, 3, activation='relu', padding='same')(X)\n",
     "    X = Flatten()(X)\n",
+    "    X = Dense(4096, activation=\"relu\")(X)\n",
     "    X = Dense(4096, activation=\"relu\")(X)\n",
     "    X = Dense(2048, activation=\"relu\")(X)\n",
     "    X = Dense(1024, activation=\"relu\")(X)\n",
@@ -320,37 +321,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_7\"\n",
+      "Model: \"model_11\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
       "image (InputLayer)           [(None, 224, 224, 3)]     0         \n",
       "_________________________________________________________________\n",
-      "ResNet50V2 (Model)           (None, 7, 7, 2048)        23564800  \n",
+      "ResNet50V2 (Functional)      (None, 7, 7, 2048)        23564800  \n",
       "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 7, 7, 256)         4718848   \n",
+      "conv2d_14 (Conv2D)           (None, 7, 7, 64)          1179712   \n",
       "_________________________________________________________________\n",
-      "conv2d_7 (Conv2D)            (None, 7, 7, 128)         295040    \n",
+      "flatten_12 (Flatten)         (None, 3136)              0         \n",
       "_________________________________________________________________\n",
-      "flatten_9 (Flatten)          (None, 6272)              0         \n",
+      "dense_34 (Dense)             (None, 4096)              12849152  \n",
       "_________________________________________________________________\n",
-      "dense_21 (Dense)             (None, 4096)              25694208  \n",
+      "dense_35 (Dense)             (None, 2048)              8390656   \n",
       "_________________________________________________________________\n",
-      "dense_22 (Dense)             (None, 2048)              8390656   \n",
-      "_________________________________________________________________\n",
-      "dense_23 (Dense)             (None, 1024)              2098176   \n",
+      "dense_36 (Dense)             (None, 1024)              2098176   \n",
       "_________________________________________________________________\n",
       "out (Dense)                  (None, 102)               104550    \n",
       "=================================================================\n",
-      "Total params: 64,866,278\n",
-      "Trainable params: 41,301,478\n",
+      "Total params: 48,187,046\n",
+      "Trainable params: 24,622,246\n",
       "Non-trainable params: 23,564,800\n",
       "_________________________________________________________________\n"
      ]
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,12 +389,12 @@
     "    reduceLR = ReduceLROnPlateau(monitor = 'val_loss', mode = 'min', patience = 5,\n",
     "                            factor = 0.5, min_lr = 1e-6, verbose = 1)\n",
     "\n",
-    "    return [reduceLR, earlystop] #checkpoint, "
+    "    return [checkpoint,reduceLR, earlystop] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,12 +417,12 @@
     "        history = model.fit(\n",
     "                            x=train_flow,\n",
     "                            y=None,\n",
-    "                            batch_size=params_dict['batch_size'],\n",
+    "                            batch_size=None,\n",
     "                            epochs=params_dict['epochs'],\n",
     "                            validation_data=val_flow,\n",
     "                            callbacks=callbacks,\n",
     "                            steps_per_epoch = params_dict['steps'],\n",
-    "                            validation_steps = params_dict['steps'],\n",
+    "                            validation_steps = params_dict['validation_steps'],\n",
     "                            )\n",
     "        \n",
     "        history = history.history\n",
@@ -436,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +472,22 @@
      "text": [
       "Found 4094 non-validated image filenames belonging to 102 classes.\n",
       "Found 2047 non-validated image filenames belonging to 102 classes.\n",
-      "Epoch 1/20\n"
+      "Epoch 1/20\n",
+      "128/128 [==============================] - 90s 686ms/step - loss: 4.9582 - acc: 0.0217 - val_loss: 4.5111 - val_acc: 0.0286\n",
+      "Epoch 2/20\n",
+      "128/128 [==============================] - 84s 656ms/step - loss: 4.5210 - acc: 0.0315 - val_loss: 4.5119 - val_acc: 0.0318\n",
+      "Epoch 3/20\n",
+      "128/128 [==============================] - 83s 647ms/step - loss: 4.5252 - acc: 0.0274 - val_loss: 4.5039 - val_acc: 0.0323\n",
+      "Epoch 4/20\n",
+      "128/128 [==============================] - 85s 665ms/step - loss: 4.5174 - acc: 0.0301 - val_loss: 4.5068 - val_acc: 0.0302\n",
+      "Epoch 5/20\n",
+      "128/128 [==============================] - 85s 665ms/step - loss: 4.5097 - acc: 0.0267 - val_loss: 4.5083 - val_acc: 0.0307\n",
+      "Epoch 6/20\n",
+      "128/128 [==============================] - 86s 674ms/step - loss: 4.5115 - acc: 0.0350 - val_loss: 4.5065 - val_acc: 0.0292\n",
+      "Epoch 7/20\n",
+      "128/128 [==============================] - 87s 681ms/step - loss: 4.5142 - acc: 0.0310 - val_loss: 4.5044 - val_acc: 0.0302\n",
+      "Epoch 8/20\n",
+      " 68/128 [==============>...............] - ETA: 35s - loss: 4.5196 - acc: 0.0313"
      ]
     }
    ],
@@ -481,7 +495,8 @@
     "params_dict = {\n",
     "    'epochs': 20,\n",
     "    'batch_size': 32,\n",
-    "    'steps': 256\n",
+    "    'steps': 128,\n",
+    "    'validation_steps':60\n",
     "}\n",
     "\n",
     "vgg_model, vgg_history = train_model(init_model, 'resnet', train_df, val_df, params_dict=params_dict)"
