--- a/flower_classifier.ipynb
+++ b/flower_classifier.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "id": "pT--0V_r0Q4B"
    },
@@ -40,13 +40,15 @@
     "from tensorflow.keras.layers import Input, Dense, Flatten\n",
     "from tensorflow.keras.layers import BatchNormalization, Dropout\n",
     "from tensorflow.keras.layers import Conv2D, MaxPool2D\n",
-    "\n",
+    "from tensorflow.keras.applications.resnet_v2 import preprocess_input\n",
     "from tensorflow.keras.models import Model, load_model\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "\n",
-    "from tensorflow.keras.applications import VGG16, ResNet50V2\n",
+    "\n",
+    "from tensorflow.keras.applications import VGG16, ResNet50V2, EfficientNetB4\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.constraints import max_norm\n",
     "\n",
     "# Scikit-learn\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -68,12 +70,13 @@
     "from glob import glob\n",
     "from tqdm import tqdm_notebook as tqdm\n",
     "\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,56 +178,13 @@
     "            width_shift_range=0.2,\n",
     "            height_shift_range=0.2,\n",
     "            horizontal_flip=True,\n",
-    "            rescale=1./255)\n",
+    "#              rescale=1./255\n",
+    "            preprocessing_function=preprocess_input\n",
+    "           )\n",
     "    else:\n",
     "        data_gen = ImageDataGenerator(rescale=1./255)\n",
     "        \n",
-    "    return data_gen.flow_from_dataframe(df, batch_size=batch_size, target_size=resize_shape, seed=SEED, validate_filenames=False, classes=classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 4094 non-validated image filenames belonging to 102 classes.\n",
-      "Found 2047 non-validated image filenames belonging to 102 classes.\n",
-      "Found 2048 non-validated image filenames belonging to 102 classes.\n"
-     ]
-    }
-   ],
-   "source": [
-    "classes = list(np.unique(labels).astype(str))\n",
-    "data_loader_train = datagen_flow(train_df, 32, (224,224), 'train')\n",
-    "data_loader_val = datagen_flow(val_df, 32, (224,224), 'val')\n",
-    "data_loader_test = datagen_flow(test_df, 32, (224,224), 'test')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((32, 224, 224, 3), (32, 102))"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a, b = data_loader_train.next()\n",
-    "a.shape, b.shape"
+    "    return data_gen.flow_from_dataframe(df, batch_size=batch_size, target_size=resize_shape, seed=SEED, validate_filenames=False, classes=classes, shuffle=True)"
    ]
   },
   {
@@ -236,27 +196,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_feature_extractor(base_model, width=224, height=224, channel=3):\n",
     "    model = base_model(input_shape=(width, height, channel), include_top=False)\n",
     "    \n",
+    "    trainable = False\n",
     "    for layer in model.layers:\n",
-    "        layer.trainable = False\n",
-    "    \n",
+    "        if base_model.__name__ == 'ResNet50V2' and 'conv5' in layer.name:\n",
+    "            trainable = True\n",
+    "#         if base_model.__name__ == 'EfficientNetB4' and 'conv5' in layer.name\n",
+    "        \n",
+    "        layer.trainable = trainable\n",
+    "        \n",
+    "            \n",
     "    return Model(model.input, model.output, name=base_model.__name__)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "vgg_fe = get_feature_extractor(VGG16)\n",
-    "resent_fe = get_feature_extractor(ResNet50V2)"
+    "# vgg_fe = get_feature_extractor(VGG16)\n",
+    "resent_fe = get_feature_extractor(ResNet50V2)\n",
+    "efficient_net = get_feature_extractor(EfficientNetB4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "resent_fe.summary()"
    ]
   },
   {
@@ -289,10 +269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def init_model(image_shape, output_shape, fe_type='vgg'):\n",
     "    inp = Input(shape=image_shape, name='image')\n",
     "    \n",
@@ -302,33 +283,35 @@
     "        X = get_feature_extractor(ResNet50V2)(inp)\n",
     "    else:\n",
     "        X = inp\n",
-    "\n",
-    "#     X = Conv2D(256, 3, activation='relu', padding='same')(X)\n",
-    "    X = Conv2D(256, 3, activation='relu', padding='same')(X)\n",
+    "    \n",
+    "#     X = Conv2D(16, 5, activation='relu', padding='same')(X)\n",
     "    X = Flatten()(X)\n",
-    "    X = Dense(4096, activation=\"relu\")(X)\n",
-    "    X = Dense(4096, activation=\"relu\")(X)\n",
-    "    X = Dense(2048, activation=\"relu\")(X)\n",
-    "    X = Dense(1024, activation=\"relu\")(X)\n",
+    "    X = BatchNormalization()(X)\n",
+    "    X = Dropout(0.5)(X)\n",
+    "    X = Dense(4096, activation=\"relu\")(X) #\n",
+    "    X = Dropout(0.5)(X)\n",
+    "    X = Dense(2048, activation=\"relu\")(X) #, kernel_regularizer=tf.keras.regularizers.L2(0.01)\n",
     "    out = Dense(output_shape, activation=\"softmax\", name = 'out')(X)\n",
     "\n",
     "    model = Model(inp, out)\n",
     "\n",
-    "    model.compile(loss='categorical_crossentropy', optimizer=Adam(), metrics=['acc'])\n",
+    "    model.compile(loss='categorical_crossentropy', optimizer=Adam(learning_rate=1e-4), metrics=['acc'])\n",
     "    \n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_11\"\n",
+      "Model: \"model_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
@@ -336,21 +319,21 @@
       "_________________________________________________________________\n",
       "ResNet50V2 (Functional)      (None, 7, 7, 2048)        23564800  \n",
       "_________________________________________________________________\n",
-      "conv2d_14 (Conv2D)           (None, 7, 7, 64)          1179712   \n",
+      "conv2d_1 (Conv2D)            (None, 7, 7, 16)          819216    \n",
       "_________________________________________________________________\n",
-      "flatten_12 (Flatten)         (None, 3136)              0         \n",
+      "flatten_1 (Flatten)          (None, 784)               0         \n",
       "_________________________________________________________________\n",
-      "dense_34 (Dense)             (None, 4096)              12849152  \n",
+      "batch_normalization_1 (Batch (None, 784)               3136      \n",
       "_________________________________________________________________\n",
-      "dense_35 (Dense)             (None, 2048)              8390656   \n",
+      "dense_2 (Dense)              (None, 4096)              3215360   \n",
       "_________________________________________________________________\n",
-      "dense_36 (Dense)             (None, 1024)              2098176   \n",
+      "dense_3 (Dense)              (None, 2048)              8390656   \n",
       "_________________________________________________________________\n",
-      "out (Dense)                  (None, 102)               104550    \n",
+      "out (Dense)                  (None, 102)               208998    \n",
       "=================================================================\n",
-      "Total params: 48,187,046\n",
-      "Trainable params: 24,622,246\n",
-      "Non-trainable params: 23,564,800\n",
+      "Total params: 36,202,166\n",
+      "Trainable params: 27,606,678\n",
+      "Non-trainable params: 8,595,488\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -371,13 +354,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_callbacks(model_name):\n",
-    "    acc = 'val_loss'\n",
-    "    acc_mode = 'min'\n",
+    "    acc = 'val_acc'\n",
+    "    acc_mode = 'max'\n",
     "    \n",
     "    checkpoint = ModelCheckpoint(\n",
     "                              fr'./models/{model_name}.h5', \n",
@@ -385,16 +368,16 @@
     "#                               verbose=1, \n",
     "                              save_best_only=True, \n",
     "                              mode=acc_mode)\n",
-    "    earlystop = EarlyStopping(monitor=acc, mode=acc_mode, verbose=1, patience=6)\n",
-    "    reduceLR = ReduceLROnPlateau(monitor = 'val_loss', mode = 'min', patience = 5,\n",
+    "    earlystop = EarlyStopping(monitor=acc, mode=acc_mode, verbose=1, patience=4)\n",
+    "    reduceLR = ReduceLROnPlateau(monitor = 'val_loss', mode = 'min', patience = 3,\n",
     "                            factor = 0.5, min_lr = 1e-6, verbose = 1)\n",
     "\n",
-    "    return [checkpoint,reduceLR, earlystop] "
+    "    return [checkpoint] #reduceLR, earlystop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,6 +406,7 @@
     "                            callbacks=callbacks,\n",
     "                            steps_per_epoch = params_dict['steps'],\n",
     "                            validation_steps = params_dict['validation_steps'],\n",
+    "                            workers=10\n",
     "                            )\n",
     "        \n",
     "        history = history.history\n",
@@ -435,21 +419,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def visualize_perf(history):\n",
-    "    ncols = 1\n",
-    "    fig, ax = plt.subplots(ncols=ncols, figsize=(5*ncols,5))\n",
+    "    fig, ax = plt.subplots(ncols=2, figsize=(5*2,5))\n",
     "    fig.suptitle(f'Model performance over epochs')\n",
     "    \n",
-    "    for k in ['val_loss', 'loss']:\n",
-    "        ax.plot(history[k])\n",
+    "    for k in ['loss', 'val_loss']:\n",
+    "        ax[0].plot(history[k])\n",
     "        \n",
-    "    ax.legend(['val_loss', 'train_loss'])\n",
-    "    ax.margins(0.01)\n",
-    "    ax.set_title('binary crossentropy')\n",
+    "    ax[0].legend(['train_loss', 'val_loss'])\n",
+    "    ax[0].margins(0.01)\n",
+    "    ax[0].set_title('Crossentropy')\n",
+    "    \n",
+    "    for k in ['acc', 'val_acc']:\n",
+    "        ax[1].plot(history[k])\n",
+    "        \n",
+    "    ax[1].legend(['train_accuracy', 'val_accuracy'])\n",
+    "    ax[1].margins(0.01)\n",
+    "    ax[1].set_title('Accuracy')\n",
     "    \n",
     "    plt.show()"
    ]
@@ -473,33 +463,50 @@
       "Found 4094 non-validated image filenames belonging to 102 classes.\n",
       "Found 2047 non-validated image filenames belonging to 102 classes.\n",
       "Epoch 1/20\n",
-      "128/128 [==============================] - 90s 686ms/step - loss: 4.9582 - acc: 0.0217 - val_loss: 4.5111 - val_acc: 0.0286\n",
+      "255/255 [==============================] - 53s 185ms/step - loss: 40.5701 - acc: 0.0189 - val_loss: 28.2742 - val_acc: 0.0276\n",
       "Epoch 2/20\n",
-      "128/128 [==============================] - 84s 656ms/step - loss: 4.5210 - acc: 0.0315 - val_loss: 4.5119 - val_acc: 0.0318\n",
+      "255/255 [==============================] - 29s 112ms/step - loss: 24.9962 - acc: 0.0304 - val_loss: 17.2151 - val_acc: 0.0276\n",
       "Epoch 3/20\n",
-      "128/128 [==============================] - 83s 647ms/step - loss: 4.5252 - acc: 0.0274 - val_loss: 4.5039 - val_acc: 0.0323\n",
+      "255/255 [==============================] - 43s 166ms/step - loss: 15.2216 - acc: 0.0434 - val_loss: 10.9416 - val_acc: 0.0207\n",
       "Epoch 4/20\n",
-      "128/128 [==============================] - 85s 665ms/step - loss: 4.5174 - acc: 0.0301 - val_loss: 4.5068 - val_acc: 0.0302\n",
+      "255/255 [==============================] - 28s 104ms/step - loss: 9.8182 - acc: 0.0403 - val_loss: 7.7508 - val_acc: 0.0207\n",
       "Epoch 5/20\n",
-      "128/128 [==============================] - 85s 665ms/step - loss: 4.5097 - acc: 0.0267 - val_loss: 4.5083 - val_acc: 0.0307\n",
+      "255/255 [==============================] - 37s 141ms/step - loss: 6.9902 - acc: 0.0528 - val_loss: 6.1538 - val_acc: 0.0212\n",
       "Epoch 6/20\n",
-      "128/128 [==============================] - 86s 674ms/step - loss: 4.5115 - acc: 0.0350 - val_loss: 4.5065 - val_acc: 0.0292\n",
+      "255/255 [==============================] - 49s 187ms/step - loss: 5.5790 - acc: 0.0545 - val_loss: 5.4200 - val_acc: 0.0236\n",
       "Epoch 7/20\n",
-      "128/128 [==============================] - 87s 681ms/step - loss: 4.5142 - acc: 0.0310 - val_loss: 4.5044 - val_acc: 0.0302\n",
+      "255/255 [==============================] - 26s 100ms/step - loss: 4.8863 - acc: 0.0741 - val_loss: 5.1958 - val_acc: 0.0202\n",
       "Epoch 8/20\n",
-      " 68/128 [==============>...............] - ETA: 35s - loss: 4.5196 - acc: 0.0313"
+      "255/255 [==============================] - 27s 103ms/step - loss: 4.5505 - acc: 0.0789 - val_loss: 5.1033 - val_acc: 0.0197\n",
+      "Epoch 9/20\n",
+      "255/255 [==============================] - 27s 101ms/step - loss: 4.3471 - acc: 0.1016 - val_loss: 5.2318 - val_acc: 0.0207\n",
+      "Epoch 10/20\n",
+      "255/255 [==============================] - 28s 107ms/step - loss: 4.2042 - acc: 0.1294 - val_loss: 5.4066 - val_acc: 0.0276\n",
+      "Epoch 11/20\n",
+      "255/255 [==============================] - 27s 102ms/step - loss: 4.0794 - acc: 0.1413 - val_loss: 5.5101 - val_acc: 0.0177\n",
+      "Epoch 12/20\n",
+      "255/255 [==============================] - 27s 103ms/step - loss: 3.8754 - acc: 0.1762 - val_loss: 5.7946 - val_acc: 0.0177\n",
+      "Epoch 13/20\n",
+      "255/255 [==============================] - 28s 105ms/step - loss: 3.7974 - acc: 0.1844 - val_loss: 6.2739 - val_acc: 0.0167\n",
+      "Epoch 14/20\n",
+      "255/255 [==============================] - 27s 104ms/step - loss: 3.6402 - acc: 0.2170 - val_loss: 6.5551 - val_acc: 0.0128\n",
+      "Epoch 15/20\n",
+      "167/255 [==================>...........] - ETA: 7s - loss: 3.3561 - acc: 0.2675"
      ]
     }
    ],
    "source": [
     "params_dict = {\n",
     "    'epochs': 20,\n",
-    "    'batch_size': 32,\n",
-    "    'steps': 128,\n",
-    "    'validation_steps':60\n",
+    "    'batch_size': 16,\n",
+    "    'steps': 255,\n",
+    "    'validation_steps':127\n",
     "}\n",
     "\n",
-    "vgg_model, vgg_history = train_model(init_model, 'resnet', train_df, val_df, params_dict=params_dict)"
+    "vgg_model, vgg_history = train_model(init_model, 'resnet', train_df, val_df, params_dict=params_dict)\n",
+    "\n",
+    "# del vgg_model\n",
+    "tf.keras.backend.clear_session()\n"
    ]
   },
   {
@@ -507,14 +514,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "visualize_perf(vgg_history)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (tf-env)",
+   "display_name": "liav_env",
    "language": "python",
-   "name": "tf-env"
+   "name": "liav_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -526,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
